<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="booklist.christine.anderson.submarineapp.ErrorScreen">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_problem_has_been_detected_and_the_system_has_been_shut_down_to_prevent_radioactivity_damage_to_your_computer"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/beefd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_below="@id/tv_error_message"
        android:id="@+id/tv_error_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/to_initialize_manual_reboot_please_enter_the_date_of_the_last_specimen_retrieval"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/beefd"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_input_date"
        android:layout_below="@id/tv_error_message2"
        android:paddingTop="15dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:hint=""
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:backgroundTint="@android:color/transparent"
        android:textCursorDrawable="@drawable/color_cursor"
        android:fontFamily="@font/beefd"
        tools:ignore="TextFields" />


    <LinearLayout
        android:id="@+id/ll_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_2">

        <Button
            android:id="@+id/btn_0"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_2"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_3"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_3">

        <Button
            android:id="@+id/btn_4"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_5"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_6"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_7"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_8"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>


        <Button
            android:id="@+id/btn_9"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_enter"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>

        <Button
            android:id="@+id/btn_clear"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/beefd"/>


    </LinearLayout>


</RelativeLayout>
